<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goback"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:clickable="true"
            android:gravity="end"
            android:textColor="#000000"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/usericon"/>
        </LinearLayout>
        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/textfieldback"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:background="@drawable/textfieldback"/>

        <Button
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:id="@+id/loginBtn"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            android:background="@drawable/registerbtn"/>
    </LinearLayout>

</LinearLayout>