...
            android:background="@drawable/textfieldback"
            />

        <Button
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:id="@+id/registerBtn"
            android:text="@string/JoinUs"
            android:textColor="#FFFFFF"
            android:layout_marginTop="25dp"
            android:background="@drawable/registerbtn"/>


...
